force-app/main/default/objects/ffr__XXXInvoiceLineItem__c/ffr__XXXInvoiceLineItem__c.object-meta.xml
<CustomObject>
    <description>For internal use only.</description>
    <label>XXX Invoice Line Item</label>
    <nameField>
        <displayFormat>XILI{000000}</displayFormat>
        <label>Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>