force-app/main/default/objects/ffr__XXXInvoiceLineItem__c/fields/ffr__Invoice__c.field-meta.xml
<CustomField>
    <fullName>ffr__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>ffr__XXXInvoice__c</referenceTo>
    <relationshipLabel>XXX Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>