force-app/main/default/objects/ffr__XXXInvoiceLineItem__c/fields/ffr__NetValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__NetValue__c</fullName>
    <formula>ffr__Quantity__c  *  ffr__UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>