force-app/main/default/objects/ffr__XXXInvoiceLineItem__c/fields/ffr__Product__c.field-meta.xml
<CustomField>
    <fullName>ffr__Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>