force-app/main/default/objects/ffr__XXXInvoiceLineItem__c/fields/ffr__TaxValue2__c.field-meta.xml
<CustomField>
    <fullName>ffr__TaxValue2__c</fullName>
    <label>Tax Value 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>