force-app/main/default/objects/ffr__XXXInvoiceLineItem__c/fields/ffr__UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ffr__UnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>